trying to fix spilling issue of elements

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -1135,10 +1135,10 @@ pre {
 
 @media print {
     * {
-        overflow: visible !important;
-        break-before: always !important;
-        page-break-inside: avoid !important;
-        position: static !important;
-        height: 100% !important;
+        overflow: auto;
+        break-before: always;
+        page-break-inside: avoid;
+        position: static;
+        height: 100%;
     }
 }
